--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
+    "react-intersection-observer": "^9.8.1",
     "react-router-dom": "^6.22.0",
+    "react-spring": "^9.7.3",
     "react-transition-group": "^4.4.5",
     "swiper": "^11.0.6"
   },
